--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         npm install
         npm run build
+        mv ./build/* .
         
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
